--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <span id="span3"></span>
         </label>
         <ul class="nav-menu">
-          <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Portfolio</a></li>
+          <li class="nav-menu-item"><a href="./portfolio.html" class="nav-menu-link nav-link">Portfolio</a></li>
           <li class="nav-menu-item"><a href="./servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
           <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Contacto</a></li>
         </ul>
