--- a/servicios.html
+++ b/servicios.html
@@ -29,7 +29,7 @@
               <a href="./index.html" class="nav-menu-link nav-link">Inicio</a>
             </li>
             <li class="nav-menu-item">
-              <a href="./servicios.html" class="nav-menu-link nav-link"
+              <a href="./portfolio.html" class="nav-menu-link nav-link"
                 >Portfolio</a
               >
             </li>
