--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Orbitron&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>Servicios</title>
-    <link rel="stylesheet" href="./pages/servicios.css" />
-    <script defer src="./pages/servicios.js"></script>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./pages/portfolio.css" />
+    <script defer src="./pages/portfolio.js"></script>
   </head>
   <body>
-    
-      <header class="header">
+        <header class="header">
         <nav class="nav">
           <a href="./index.html" class="logo nav-link">Maxi</a>
           <input type="checkbox" id="nav-toggle" />
@@ -39,23 +38,24 @@
           </ul>
         </nav>
       </header>
-      <div class="servicios-container">
+
+      <div class="portfolio-container">
       <h1 class="title">Portfolio</h1></div>
-      <div class="servicios-content"></div>
-      <template id="servicios-template">
-        <div class="servicios">
+      <div class="portfolio-content"></div>
+      <template id="portfolio-template">
+        <div class="portfolio">
           <img
             src="./pages/images/imagen-works.png"
             alt=""
-            class="servicios-img"/>
-          <h2 class="servicios-titulo">Desarrollo de apps</h2>
-          <p class="servicios-text">
-            Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales
-            vehicula.
+            class="portfolio-img"/>
+          <h2 class="portfolio-titulo">Trabajo XR45</h2>
+          <p class="portfolio-text">
+            Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales vehicula.
           </p>
-        </div>
-      </template>
+          <a class="portfolio-link" href="www.google.com.ar">Link</a>
+          </template>
+      </div>
+      
       <div class="footer">
       <div class="footer__logo">Maxi</div>
       <div class="footer__containter">
