--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Orbitron&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./pages/index.css" />
     <title>My Home Page</title>
+
+    <script defer src="./components/header.js"></script>
     <script defer src="./pages/index.js"></script>
     <script src="https://kit.fontawesome.com/a3b9fd7cfb.js" crossorigin="anonymous"></script>
   </head>
