se agrega contacto.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <title>My Home Page</title>
 
-    <script defer src="./components/header.js"></script>
-    <script defer src="./pages/index.js"></script>
+     <script defer src="./pages/index.js"></script>
     <script src="https://kit.fontawesome.com/a3b9fd7cfb.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -29,7 +28,7 @@
         <ul class="nav-menu">
           <li class="nav-menu-item"><a href="./portfolio.html" class="nav-menu-link nav-link">Portfolio</a></li>
           <li class="nav-menu-item"><a href="./servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
-          <li class="nav-menu-item"><a href="#" class="nav-menu-link nav-link">Contacto</a></li>
+          <li class="nav-menu-item"><a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -86,7 +85,7 @@
     <a href="#" class="footer__redes">Linkedin
       <img class="footer__img"src="./pages/images/linkedin.png" alt="">
     </a>
-    <a href="#" class="footer__redes">Github
+    <a href="https://github.com/Mmaxi1720" class="footer__redes">Github
       <img class="footer__img" src="./pages/images/github.png" alt="">
     </a>
   </div>
