--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               >
             </li>
             <li class="nav-menu-item">
-              <a href="#" class="nav-menu-link nav-link">Contacto</a>
+              <a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a>
             </li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
           <p class="portfolio-text">
             Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales vehicula.
           </p>
-          <a class="portfolio-link" href="www.google.com.ar">Link</a>
+          <a class="portfolio-link" href="https://apx.school/">https://apx.school/</a>
           </template>
       </div>
       
@@ -67,7 +67,7 @@
           >Linkedin
           <img class="footer__img" src="./pages/images/linkedin.png" alt="" />
         </a>
-        <a href="#" class="footer__redes"
+        <a href="https://github.com/Mmaxi1720" class="footer__redes"
           >Github
           <img class="footer__img" src="./pages/images/github.png" alt="" />
         </a>
