--- a/servicios.html
+++ b/servicios.html
@@ -34,7 +34,7 @@
               >
             </li>
             <li class="nav-menu-item">
-              <a href="#" class="nav-menu-link nav-link">Contacto</a>
+              <a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a>
             </li>
           </ul>
         </nav>
@@ -67,7 +67,7 @@
           >Linkedin
           <img class="footer__img" src="./pages/images/linkedin.png" alt="" />
         </a>
-        <a href="#" class="footer__redes"
+        <a href="https://github.com/Mmaxi1720" class="footer__redes"
           >Github
           <img class="footer__img" src="./pages/images/github.png" alt="" />
         </a>
