--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
       <div class="footer">
       <div class="footer__logo">Maxi</div>
       <div class="footer__containter">
-        <a href="#" class="footer__redes"
+        <a href="https://www.instagram.com/mendezmaxi91/" class="footer__redes"
           >Instagram
           <img class="footer__img" src="./pages/images/instagram.png" alt="" />
         </a>
