--- a/contacto.html
+++ b/contacto.html
@@ -34,23 +34,23 @@
     <div class="form__title">Contacto</div>
     <div class="form_container">
     <h4 class="form__name">Nombre</h4>
-    <input class="form__input" type="text">
-    <label class="form__lbl" for="Nombre"></label>
+    <input id="name"class="form__input" type="text">
+    <label class="form__lbl" for="nombre"></label>
     <h4 class="form__name">Email</h4>
-    <input class="form__input" type="Email">
-    <label class="form__lbl" for="Email"></label>
+    <input id="email"class="form__input" for="Email">
+    <label class="form__lbl" for="email"></label>
     <h4 class="form__name">Mensaje</h4>
-    <textarea class="form__textArea"></textarea>
+    <textarea id="message"class="form__textArea"></textarea>
     <button class="btn-send">Enviar</button>
   </div>
       <div class="footer">
         <div class="footer__logo">Maxi</div>
         <div class="footer__containter">
-          <a href="#" class="footer__redes"
+          <a href="https://www.instagram.com/mendezmaxi91/" class="footer__redes"
             >Instagram
             <img class="footer__img" src="./pages/images/instagram.png" alt="" />
           </a>
-          <a href="#" class="footer__redes"
+          <a href="" class="footer__redes"
             >Linkedin
             <img class="footer__img" src="./pages/images/linkedin.png" alt="" />
           </a>
