--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="footer">
   <div class="footer__logo">Maxi</div>
   <div class="footer__containter">
-    <a href="#" class="footer__redes">Instagram
+    <a href="https://www.instagram.com/mendezmaxi91/" class="footer__redes">Instagram
       <img class="footer__img" src="./pages/images/instagram.png" alt="">
     </a>
     <a href="#" class="footer__redes">Linkedin
