--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
             <span id="span3"></span>
           </label>
           <ul class="nav-menu">
-              <li class="nav-menu-item"><a href="/index.html" class="nav-menu-link nav-link">Inicio</a></li>
+              <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link nav-link">Inicio</a></li>
             <li class="nav-menu-item"><a href="./portfolio.html" class="nav-menu-link nav-link">Portfolio</a></li>
             <li class="nav-menu-item"><a href="./servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
           </ul>
