--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Orbitron&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./pages/index.css" />
     <title>My Home Page</title>
-
-     <script defer src="./pages/index.js"></script>
+    
+    <script defer src="./pages/index.js"></script>
+    <script async src="./pages/contacto.js"></script>
     <script src="https://kit.fontawesome.com/a3b9fd7cfb.js" crossorigin="anonymous"></script>
-  </head>
+   </head>
   <body>
     <header class="header">
       <nav class="nav">
