--- a/servicios.html
+++ b/servicios.html
@@ -10,68 +10,36 @@
       rel="stylesheet"
     />
     <title>Servicios</title>
+    <script defer src="./components/header.js"></script>
+    <link rel="stylesheet" href="./components/header.css" />
+
+    <script defer src="./components/footer.js"></script>
+    <link rel="stylesheet" href="./components/footer.css">
+    
     <link rel="stylesheet" href="./pages/servicios.css" />
     <script defer src="./pages/servicios.js"></script>
   </head>
   <body>
-    
-      <header class="header">
-        <nav class="nav">
-          <a href="./index.html" class="logo nav-link">Maxi</a>
-          <input type="checkbox" id="nav-toggle" />
-          <label for="nav-toggle" class="lbl-menu">
-            <span id="span1"></span>
-            <span id="span2"></span>
-            <span id="span3"></span>
-          </label>
-          <ul class="nav-menu">
-            <li class="nav-menu-item">
-              <a href="./index.html" class="nav-menu-link nav-link">Inicio</a>
-            </li>
-            <li class="nav-menu-item">
-              <a href="./portfolio.html" class="nav-menu-link nav-link"
-                >Portfolio</a
-              >
-            </li>
-            <li class="nav-menu-item">
-              <a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <div class="servicios-container">
-      <h1 class="title">Servicios</h1></div>
-      <div class="servicios-content"></div>
-      <template id="servicios-template">
-        <div class="servicios">
-          <img
-            src="./pages/images/imagen-works.png"
-            alt=""
-            class="servicios-img"/>
-          <h2 class="servicios-titulo">Desarrollo de apps</h2>
-          <p class="servicios-text">
-            Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales
-            vehicula.
-          </p>
-        </div>
-      </template>
-      <div class="footer">
-      <div class="footer__logo">Maxi</div>
-      <div class="footer__containter">
-        <a href="#" class="footer__redes"
-          >Instagram
-          <img class="footer__img" src="./pages/images/instagram.png" alt="" />
-        </a>
-        <a href="#" class="footer__redes"
-          >Linkedin
-          <img class="footer__img" src="./pages/images/linkedin.png" alt="" />
-        </a>
-        <a href="https://github.com/Mmaxi1720" class="footer__redes"
-          >Github
-          <img class="footer__img" src="./pages/images/github.png" alt="" />
-        </a>
-      </div>
+    <div class="header__container"></div>
+    <div class="servicios-container">
+      <h1 class="title">Servicios</h1>
     </div>
+    <div class="servicios-content"></div>
+    <template id="servicios-template">
+      <div class="servicios">
+        <img
+          src="./pages/images/imagen-works.png"
+          alt=""
+          class="servicios-img"
+        />
+        <h2 class="servicios-titulo">Desarrollo de apps</h2>
+        <p class="servicios-text">
+          Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales
+          vehicula.
+        </p>
+      </div>
+    </template>
+    <div class="footer__cont"></div>
   </body>
 </html>
