--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Orbitron&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./pages/index.css" />
     <title>My Home Page</title>
+    <script defer src="./components/header.js"></script>
+   <link rel="stylesheet" href="./components/header.css">
+
+   <script defer src="./components/form.js"></script>
+   
+    <script defer src="./components/footer.js"></script>
+    <link rel="stylesheet" href="./components/footer.css">
+    <link rel="stylesheet" href="./pages/index.css">
     
     <script defer src="./pages/index.js"></script>
-    <script async src="./pages/contacto.js"></script>
+    <script defer src="./pages/contacto.js"></script>
     <script src="https://kit.fontawesome.com/a3b9fd7cfb.js" crossorigin="anonymous"></script>
-   </head>
+    </head>
   <body>
-    <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo nav-link">Maxi</a>
-        <input type="checkbox"id="nav-toggle">
-        <label for="nav-toggle" class="lbl-menu">
-          <span id="span1"></span>
-          <span id="span2"></span>
-          <span id="span3"></span>
-        </label>
-        <ul class="nav-menu">
-          <li class="nav-menu-item"><a href="./portfolio.html" class="nav-menu-link nav-link">Portfolio</a></li>
-          <li class="nav-menu-item"><a href="./servicios.html" class="nav-menu-link nav-link">Servicios</a></li>
-          <li class="nav-menu-item"><a href="./contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
+
+
+    <div class="header__container"></div>
     <img class="home-img" src="./pages/images/home-mobile.png" alt="">
     <img class="home-img-desktop" src="./pages/images/home-desktop.png" alt="">
     <h1 class="home-title">Hola</h1>
@@ -63,33 +58,10 @@
   <div class="que-hago">y mas cosas</div>
   <p class="parrafo-cosas">Algo interesante sobre mi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim id, sodales vehicula velit. Aenean lobortis posuere tristique.</p>
 </div>
+
 <div class="form">
   <div class="form__title">Escribime</div>
-  <div class="form_container">
-  <h4 class="form__name">Nombre</h4>
-  <input class="form__input" type="text">
-  <label class="form__lbl" for="Nombre"></label>
-  <h4 class="form__name">Email</h4>
-  <input class="form__input" type="Email">
-  <label class="form__lbl" for="Email"></label>
-  <h4 class="form__name">Mensaje</h4>
-  <textarea class="form__textArea"></textarea>
-  <button class="btn-send">Enviar</button>
-</div>
-</div>
-<div class="footer">
-  <div class="footer__logo">Maxi</div>
-  <div class="footer__containter">
-    <a href="https://www.instagram.com/mendezmaxi91/" class="footer__redes">Instagram
-      <img class="footer__img" src="./pages/images/instagram.png" alt="">
-    </a>
-    <a href="#" class="footer__redes">Linkedin
-      <img class="footer__img"src="./pages/images/linkedin.png" alt="">
-    </a>
-    <a href="https://github.com/Mmaxi1720" class="footer__redes">Github
-      <img class="footer__img" src="./pages/images/github.png" alt="">
-    </a>
-  </div>
-</div>
+  <div class="form__contenedor"></div>
+<div class="footer__cont"></div>
  </body>
 </html>
